--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -101,10 +101,6 @@
         <item name="android:textColor">@color/primaryBaseColor</item>
     </style>
 
-    <style name="regular_edx_gray_dark_text" parent="@style/regular_text">
-        <item name="android:textColor">@color/primaryBaseColor</item>
-    </style>
-
     <style name="regular_primary_x_light_text" parent="@style/regular_text">
         <item name="android:textColor">@color/primaryXLightColor</item>
     </style>
@@ -233,4 +229,11 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="video_download_label_text_style" parent="regular_primary_base_text">
+        <item name="android:textSize">@dimen/edx_x_small</item>
+    </style>
+
+    <style name="video_download_description_text_style" parent="regular_primary_x_light_text">
+        <item name="android:textSize">@dimen/edx_x_small</item>
+    </style>
 </resources>
