feat: Stateful Button indicating activity for payment flow
Use `CircularProgressIndicator` from material.io for the
stageful indication.
Ref: https://material.io/components/progress-indicators#usage

Update `com.google.android.material` to v1.5.0-alpha02 required
by `CircularProgressIndicator` with targetSdkVersion `30`

fixes: LEARNER-8568

--- a/OpenEdXMobile/res/layout/layout_upgrade_btn.xml
+++ b/OpenEdXMobile/res/layout/layout_upgrade_btn.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_upgrade"
-        style="@style/edX.Widget.ActionBrandPillButton"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/upgrade_now_button_height"
         android:layout_gravity="center"
-        android:padding="@dimen/upgrade_now_button_padding"
-        android:text="@string/label_upgrade_course_button"
-        app:backgroundTint="@color/secondaryBaseColor"
-        app:icon="@drawable/ic_lock"
-        app:iconGravity="textStart"
-        app:iconTint="@color/edx_brand_button_text" />
+        android:background="@drawable/edx_brand_button">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_upgrade"
+            style="@style/edX.Widget.ActionBrandPillButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="@dimen/upgrade_now_button_padding"
+            android:text="@string/label_upgrade_course_button"
+            app:backgroundTint="@color/secondaryBaseColor"
+            app:icon="@drawable/ic_lock"
+            app:iconGravity="textStart"
+            app:iconTint="@color/edx_brand_button_text" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loading_indicator"
+            style="@style/Update.Now.Progress"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible" />
+    </FrameLayout>
 </layout>
