feat: stateful button indicating activity for payment flow (#1595)
feat: stateful button indicating activity for payment flow

Use `CircularProgressIndicator` from material.io for the
stageful indication.
Ref: https://material.io/components/progress-indicators#usage

Update `com.google.android.material` to v1.5.0-alpha02 required
by `CircularProgressIndicator` with targetSdkVersion `30`

fixes: LEARNER-8568

--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -324,5 +324,8 @@
 
     <!-- Upgrade Now -->
     <dimen name="upgrade_now_button_padding">4dp</dimen>
+    <dimen name="upgrade_now_progress_indicator_size">28dp</dimen>
+    <dimen name="upgrade_now_progress_indicator_thickness">3dp</dimen>
+    <dimen name="upgrade_now_button_height">44dp</dimen>
 
 </resources>
