fix: Address PR comments

--- a/OpenEdXMobile/res/values/course_dates_strings.xml
+++ b/OpenEdXMobile/res/values/course_dates_strings.xml
@@ -51,4 +51,18 @@
     <!-- Title syncing calendar dialog  -->
     <string name="title_syncing_calendar">Syncing calendar...</string>
     <!-- endregion -->
+
+    <!-- Message on shift course dates successfully on Assessment -->
+    <string name="assessment_shift_dates_success_msg">Your due dates have been successfully shifted to help you stay on track.</string>
+    <!-- Label to view shifted dates -->
+    <string name="assessment_view_all_dates"><u>View all dates</u></string>
+
+    <!-- region: Course dates error -->
+    <!-- Error Message when course dates are not available -->
+    <string name="course_dates_unavailable_message">Course dates are not currently available.</string>
+    <!-- Message Course Dates Reset Successful -->
+    <string name="course_dates_reset_successful">Your dates have been successfully shifted.</string>
+    <!-- Message Course Dates Reset Unsuccessful -->
+    <string name="course_dates_reset_unsuccessful">Your dates could not be shifted. Please try again.</string>
+    <!-- endregion -->
 </resources>
