--- a/OpenEdXMobile/res/layout/activity_register.xml
+++ b/OpenEdXMobile/res/layout/activity_register.xml
@@ -90,11 +90,13 @@
                     android:layout_height="wrap_content"
                     tools:text="@string/by_creating_account" />
 
-                <FrameLayout
+                <LinearLayout
                     android:id="@+id/createAccount_button_layout"
                     style="@style/edX.Widget.SignInButtonLayout"
                     android:contentDescription="@string/create_account_btn"
-                    android:focusable="true">
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/create_account_tv"
@@ -102,7 +104,7 @@
                         android:text="@string/create_account_text" />
 
                     <include layout="@layout/button_progress_indicator" />
-                </FrameLayout>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
