--- a/OpenEdXMobile/res/layout/button_progress_indicator.xml
+++ b/OpenEdXMobile/res/layout/button_progress_indicator.xml
@@ -2,15 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <ProgressBar
+    <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progress_indicator"
+        style="@style/Widget.App.CircularProgressIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center_vertical|end"
+        android:layout_marginStart="@dimen/edx_half_margin"
         android:visibility="gone"
         tools:visibility="visible" />
 </layout>
