--- a/OpenEdXMobile/res/layout/fragment_edit_user_profile.xml
+++ b/OpenEdXMobile/res/layout/fragment_edit_user_profile.xml
@@ -41,13 +41,15 @@
                         app:civ_border_width="1dp"
                         tools:src="@drawable/profile_photo_placeholder" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
                         android:id="@+id/profile_image_progress"
                         android:layout_width="@dimen/edx_base"
                         android:layout_height="@dimen/edx_base"
+                        android:indeterminate="true"
                         android:layout_gravity="center"
-                        app:srcCompat="@drawable/custom_circular_progress_bar"
-                        app:tint="@color/accentAColor" />
+                        app:indicatorSize="@dimen/edx_large"
+                        app:trackThickness="@dimen/edx_x_quarter_margin"
+                        app:indicatorColor="@color/accentAColor" />
                 </FrameLayout>
 
                 <TextView
