--- a/OpenEdXMobile/res/layout/loading_indicator.xml
+++ b/OpenEdXMobile/res/layout/loading_indicator.xml
@@ -2,12 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ProgressBar
+    <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loading_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
+        android:indeterminate="true"
         android:visibility="gone"
         tools:ignore="ObsoleteLayoutParam"
         tools:visibility="visible" />
