--- a/OpenEdXMobile/res/layout/alert_dialog_progress.xml
+++ b/OpenEdXMobile/res/layout/alert_dialog_progress.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -7,12 +8,15 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ProgressBar
+        <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/loading_indicator"
-            android:layout_width="@dimen/ic_xx_large"
-            android:layout_height="@dimen/ic_xx_large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/edx_double_margin"
-            android:layout_marginBottom="@dimen/widget_margin_quadruple" />
+            android:layout_marginBottom="@dimen/widget_margin_quadruple"
+            android:indeterminate="true"
+            app:indicatorSize="@dimen/ic_xx_large"
+            app:trackThickness="@dimen/edx_x_quarter_margin" />
     </LinearLayout>
 </layout>
