--- a/OpenEdXMobile/res/values-ar/labels.xml
+++ b/OpenEdXMobile/res/values-ar/labels.xml
@@ -1,12 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-  <!--Divider between current time and total time. For example  "2:33/5:10"-->
-  <string name="lbl_slash">/
-</string>
+<resources>
+<!--Divider between current time and total time. For example  "2:33/5:10"-->
+  <string name="lbl_slash">/</string>
   <!--Button allowing user to open a web page corresponding to the current screen in a web browser-->
   <string name="lbl_view_on_web">العرض على الموقع الإلكتروني</string>
-  <!--Label indicating that the only course content visible in the app is videos-->
-  <string name="lbl_showing_only_videos">يتم عرض ملفات الفيديو فقط</string>
   <!--A button's label that reloads the content on screen-->
   <string name="lbl_reload">إعادة التحميل</string>
   <!--Dialog Fragment Labels-->
