--- a/OpenEdXMobile/res/values-zh/labels.xml
+++ b/OpenEdXMobile/res/values-zh/labels.xml
@@ -1,11 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
   <!--Divider between current time and total time. For example  "2:33/5:10"-->
   <string name="lbl_slash">/</string>
   <!--Button allowing user to open a web page corresponding to the current screen in a web browser-->
   <string name="lbl_view_on_web">在网页中查看</string>
-  <!--Label indicating that the only course content visible in the app is videos-->
-  <string name="lbl_showing_only_videos">只显示视频</string>
   <!--A button's label that reloads the content on screen-->
   <string name="lbl_reload">刷新</string>
   <!--Dialog Fragment Labels-->
